test/modules/packages/Futures/futures-error-args.good
futures-error-args.chpl:3: error: Async task function called with mismatching arguments
